Changes made to dashboard.html and home.html

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,7 @@
 
   </head>
   <body>
-    <div = "container">
+    <div class= "container">
       <h1>Yummy Recipe App</h1> 
     
       <button type="button" class="btn btn-default">Recipes</button> <button type="button" class="btn btn-default">Login</button>  <button type="button" class="btn btn-default">Signup</button>                       
