--- a/templates/home.html
+++ b/templates/home.html
@@ -6,56 +6,57 @@
 
   </head>
   <body>
-    <h1>Yummy Recipe App</h1> 
+    <div class = "container">
+      <h1>Yummy Recipe App</h1> 
+      
+        <button type="button" class="btn btn-default">Recipes</button> <button type="button" class="btn btn-default">Login</button>  <button type="button" class="btn btn-default">Signup</button>                       
+
+      
+          <p> Do you love cooking and eating amazing food and cannot keep track of your favorite chef's recipe</p> 
+          <p> We have got you </p>
+          <p> View our amazing recipes</p>
     
-      <button type="button" class="btn btn-default">Recipes</button> <button type="button" class="btn btn-default">Login</button>  <button type="button" class="btn btn-default">Signup</button>                       
 
+        <p> Have an account with us:</p> 
+      <form>
+      <div class="form-group">
+        <label for="pwd">Email:</label>
+        <input type="password" class="form-control" id="email">
+      </div>
+      <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" id="pwd">
+      </div>
     
-        <p> Do you love cooking and eating amazing food and cannot keep track of your favorite chef's recipe</p> 
-        <p> We have got you </p>
-        <p> View our amazing recipes</p>
-  
-
-       <p> Have an account with us:</p> 
-    <form>
-    <div class="form-group">
-      <label for="pwd">Email:</label>
-      <input type="password" class="form-control" id="email">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd">
-    </div>
-  
-    <button type="submit" class="btn btn-default">Login</button>
-    </form>
-
-
-    <p> Donot have an account with us:</p> 
-    <form>
-    <div class="form-group">
-      <label for="email">First Name:</label>
-      <input type="email" class="form-control" id="fname">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Last Name:</label>
-      <input type="password" class="form-control" id="lname">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Email:</label>
-      <input type="password" class="form-control" id="email">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd">
-    </div>
-  
-    <button type="submit" class="btn btn-default">Signup</button>
-    </form>
-        
-        </div>
+      <button type="submit" class="btn btn-default">Login</button>
       </form>
+
+
+      <p> Donot have an account with us:</p> 
+      <form>
+      <div class="form-group">
+        <label for="email">First Name:</label>
+        <input type="email" class="form-control" id="fname">
+      </div>
+      <div class="form-group">
+        <label for="pwd">Last Name:</label>
+        <input type="password" class="form-control" id="lname">
+      </div>
+      <div class="form-group">
+        <label for="pwd">Email:</label>
+        <input type="password" class="form-control" id="email">
+      </div>
+      <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" id="pwd">
+      </div>
     
- 
+      <button type="submit" class="btn btn-default">Signup</button>
+      </form>
+          
+          </div>
+        </form>
+    
+    </div>
   </body>
 </html>
