Changes to dashboard.html

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,9 +9,9 @@
     <div class= "container">
       <h1>Yummy Recipe App</h1> 
     
-      <button type="button" class="btn btn-default">Recipes</button> <button type="button" class="btn btn-default">Login</button>  <button type="button" class="btn btn-default">Signup</button>                       
+      <button type="button" class="btn btn-default">Recipes</button> <button type="button" class="btn btn-default">Login</button>  <button type="button" class="btn btn-default">Signup</button>     <p> Hallo, First Name..</p>        
 
-      <p> Hallo, First Name..</p>
+      
 
         
       <p> Your favorite Recipes </p>
