--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,22 +2,39 @@
 <html lang="en">
   <head>
     <title>Yummy Recipe App</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
+
+  
   <body>
-    <div = "container">
-      <h1>Yummy Recipe App</h1> 
-    
-      <button type="button" class="btn btn-default">Recipes</button> <button type="button" class="btn btn-default">Login</button>  <button type="button" class="btn btn-default">Signup</button>                       
 
-      <p> Hallo, First Name..</p>
-
+      <nav class="navbar navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#">Yummy Recipe App</a>
+            </div>
+            <ul class="nav navbar-nav">
+              <li><a href="home.html">Home</a></li>
+              <li><a href="dashboard.html">Recipes</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#"><span class="glyphicon glyphicon-user"></span> Hallo, Jane Doe</a></li>
+                
+            </ul>
+        </nav>
+      <div class = "container">
         
-      <p> Your favorite Recipes </p>
+       <h3>Your favorite Recipes</h3> 
 
 
-    </div>     
+
+
+      <button type="submit" class="btn btn-default"><a href = "categories.html">Add Recipe Category</a></button>  <button type="submit" class="btn btn-default"><a href = "addrecipe.html">Add Recipe</a></button> 
+      </div>     
  
   </body>
 </html>
