--- a/templates/home.html
+++ b/templates/home.html
@@ -2,60 +2,77 @@
 <html lang="en">
   <head>
     <title>Yummy Recipe App</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
+
+  
   <body>
-    <h1>Yummy Recipe App</h1> 
-    
-      <button type="button" class="btn btn-default">Recipes</button> <button type="button" class="btn btn-default">Login</button>  <button type="button" class="btn btn-default">Signup</button>                       
 
-    
-        <p> Do you love cooking and eating amazing food and cannot keep track of your favorite chef's recipe</p> 
-        <p> We have got you </p>
-        <p> View our amazing recipes</p>
-  
+      <nav class="navbar navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#">Yummy Recipe App</a>
+            </div>
+            <ul class="nav navbar-nav">
+              <li><a href="home.html">Home</a></li>
+              <li><a href="dashboard.html">Recipes</a></li>
+            </ul>
+          </div>
+      </nav>
 
-       <p> Have an account with us:</p> 
-    <form>
-    <div class="form-group">
-      <label for="pwd">Email:</label>
-      <input type="password" class="form-control" id="email">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd">
-    </div>
-  
-    <button type="submit" class="btn btn-default">Login</button>
-    </form>
+      <div class="container">
 
+           <b> <p> Do you love cooking and eating amazing food and cannot keep track of your favorite chef's recipe</p> 
+            <p> We have got you </p>
+            <p> View our amazing recipes</p> </b>
+      
 
-    <p> Donot have an account with us:</p> 
-    <form>
-    <div class="form-group">
-      <label for="email">First Name:</label>
-      <input type="email" class="form-control" id="fname">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Last Name:</label>
-      <input type="password" class="form-control" id="lname">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Email:</label>
-      <input type="password" class="form-control" id="email">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd">
-    </div>
-  
-    <button type="submit" class="btn btn-default">Signup</button>
-    </form>
-        
+          <p> Have an account with us:</p> 
+        <form>
+        <div class="form-group">
+          <label for="pwd">Email:</label>
+          <input type="password" class="form-control" id="email">
         </div>
-      </form>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="pwd">
+        </div>
+      
+        <button type="submit" class="btn btn-default">Login</button>
+        </form>
+
+
+        <p> Donot have an account with us:</p> 
+        <form>
+        <div class="form-group">
+          <label for="email">First Name:</label>
+          <input type="email" class="form-control" id="fname">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Last Name:</label>
+          <input type="password" class="form-control" id="lname">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Email:</label>
+          <input type="password" class="form-control" id="email">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="pwd">
+        </div>
+      
+        <button type="submit" class="btn btn-default">Signup</button>
+        </form>
+            
+            </div>
+          </form>
+
+      </div>
     
- 
+    </div>
   </body>
 </html>
