Updates to add recipe page to reflect routes

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -18,8 +18,8 @@
                           <a class="navbar-brand" href="#">Yummy Recipe App</a>
                         </div>
                         <ul class="nav navbar-nav">
-                          <li><a href="home.html">Home</a></li>
-                          <li><a href="dashboard.html">Recipes</a></li>
+                          <li><a href="{{ url_for('main')}}">Home</a></li>
+                          <li><a href="{{ url_for('dashboard')}} ">Recipes</a></li>
                         </ul>
                 </div>
             </nav>
