--- a/templates/categories.html
+++ b/templates/categories.html
@@ -28,14 +28,15 @@
         
 
         <p>Recipe Categories:</p> 
-        <form>
+
+        <form method = "POST">
         <div class="form-group">
-        <label for="pwd">Name:</label>
-        <input type="password" class="form-control" id="email">
+        <label>Name:</label>
+        <input type="name" class="form-control" id="name">
         </div>
         <div class="form-group">
-        <label for="pwd">Photo:</label>
-        <input type="password" class="form-control" id="pwd">
+        <label>Description:</label>
+        <input type="name" class="form-control" id="description">
         </div>
     
         <button type="submit" class="btn btn-default">Create Category</button>
