--- a/templates/home.html
+++ b/templates/home.html
@@ -49,19 +49,19 @@
         <p> Donot have an account with us:</p> 
         <form>
         <div class="form-group">
-          <label for="email">First Name:</label>
+          <label>First Name:</label>
           <input type="email" class="form-control" id="fname">
         </div>
         <div class="form-group">
-          <label for="pwd">Last Name:</label>
+          <label>Last Name:</label>
           <input type="password" class="form-control" id="lname">
         </div>
         <div class="form-group">
-          <label for="pwd">Email:</label>
+          <label>Email:</label>
           <input type="password" class="form-control" id="email">
         </div>
         <div class="form-group">
-          <label for="pwd">Password:</label>
+          <label>Password:</label>
           <input type="password" class="form-control" id="pwd">
         </div>
       
