--- a/templates/categories.html
+++ b/templates/categories.html
@@ -29,14 +29,10 @@
 
         <p>Recipe Categories:</p> 
 
-        <form method = "POST">
+        <form method = "POST" action="/viewcategories">
         <div class="form-group">
         <label>Name:</label>
-        <input type="name" class="form-control" id="name">
-        </div>
-        <div class="form-group">
-        <label>Description:</label>
-        <input type="name" class="form-control" id="description">
+        <input type="text" name = "categoryname" class="form-control" id="name">
         </div>
     
         <button type="submit" class="btn btn-default">Create Category</button>
