--- a/templates/home.html
+++ b/templates/home.html
@@ -32,14 +32,14 @@
       
 
           <p> Have an account with us:</p> 
-        <form>
+        <form method ="POST" action="/home/login">
         <div class="form-group">
-          <label for="pwd">Email:</label>
-          <input type="password" class="form-control" id="email">
+          <label>First Name:</label>
+          <input type="text" name="firstname" class="form-control" id="fname">
         </div>
         <div class="form-group">
           <label for="pwd">Password:</label>
-          <input type="password" class="form-control" id="pwd">
+          <input type="password" name = "password" class="form-control" id="pwd">
         </div>
       
         <button type="submit" class="btn btn-default">Login</button>
@@ -47,22 +47,22 @@
 
 
         <p> Donot have an account with us:</p> 
-        <form>
+        <form method ="POST" action="/home/signup">
         <div class="form-group">
           <label>First Name:</label>
-          <input type="email" class="form-control" id="fname">
+          <input type="text" name="firstname" class="form-control" id="fname">
         </div>
         <div class="form-group">
           <label>Last Name:</label>
-          <input type="password" class="form-control" id="lname">
+          <input type="text" name="lastname" class="form-control" id="lname">
         </div>
         <div class="form-group">
           <label>Email:</label>
-          <input type="password" class="form-control" id="email">
+          <input type="email" name = "email" class="form-control" id="email">
         </div>
         <div class="form-group">
           <label>Password:</label>
-          <input type="password" class="form-control" id="pwd">
+          <input type="password" name = "password" class="form-control" id="pwd">
         </div>
       
         <button type="submit" class="btn btn-default">Signup</button>
