--- a/templates/viewrecipes.html
+++ b/templates/viewrecipes.html
@@ -26,22 +26,17 @@
 
         <div class="container">
 
-            <p>Recipes</p> 
-            
-            <form method = "POST" action = "/viewrecipes">
-              <div class="form-group">
-              <label>Name:</label>
-              <input type="text" name = "recipename" class="form-control" id="recipename">
-              </div>
+            <p>Your favorite Recipes from top chefs</p> 
                         
-              <div class="form-group">
-              <label>Description:</label>
-              <input type="text" name = "description" class="form-control" id="description">
-              </div>
-          
-            <button type="submit" class="btn btn-default">Add Recipe</button>
-            </form>
+
+                Recipe name: {{recipename}} 
+              </br>
+                Description: {{decsription}}
             
+                <button class="btn btn-default"><a href = "{{ url_for('addcategories')}} ">Add Recipe Category</a></button> 
+                
+                <button class="btn btn-default"><a href = "{{url_for('addrecipe')}}">Add Recipe</a></button> 
+          
         </div>
     </div>
   </body>
