Update to rectify the login and incorporate adding categories

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,10 +31,11 @@
         
        <h3>Your favorite Recipes</h3> 
           
-             
-          <table><tr><td>Categories:{{categoryname}} </a></td></tr></table> <br>
+       {% for category in Categories%}
+              
+       <table><tr><td>Categories:{{categoryname}} </a></td></tr></table> <br>
           
-        
+       {%endfor%}
       <button class="btn btn-default"><a href = "{{ url_for('addcategories')}} ">Add Recipe Category</a></button> 
       
       <button class="btn btn-default"><a href = "{{url_for('addrecipe')}}">Add Recipe</a></button> 
