--- a/templates/login.html
+++ b/templates/login.html
@@ -19,11 +19,12 @@
             </div>
             <ul class="nav navbar-nav">
               <li><a href="{{ url_for('main')}}">Home</a></li>
-              <li><a href="{{ url_for('dashboard')}} ">Recipes</a></li>
+              
             </ul>
           </div>
       </nav>
-      
+        
+      <div class = "container">
 
           <p> Have an account with us:</p> 
         <form method ="POST" action="/login">
@@ -38,11 +39,12 @@
       
         <button type="submit" class="btn btn-default">Login</button>
         </form>
+    
             
             </div>
           </form>
 
-      </div>
+                                                                              </div>
     
     </div>
   </body>
