Changes to application file and dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,7 +31,7 @@
         
        <h3>Your favorite Recipes</h3> 
           
-          {%for category in range(categories)%}
+          {%for category in categories%}
                 
           <table><tr><td>Categories:{{category}} </a></td></tr></table> <br>
             
