--- a/templates/editcategories.html
+++ b/templates/editcategories.html
@@ -29,13 +29,13 @@
 
         <p>Recipe Categories:</p> 
 
-        <form method = "POST" action="/addcategories">
+        <form method = "POST" action="{{ url_for('editcategories', categoryname=categoryname) }}">
           <div class="form-group">
-          <label>Category Name:</label>
-          <input type="text" name = "categoryname" class="form-control">
+          <label>New Category Name:</label>
+          <input type="text" name = "new_categoryname" class="form-control">
           </div>
       
-          <button type="submit" class="btn btn-default">Create Category</button>
+          <button type="submit" class="btn btn-default">Update Category</button>
         </form>
         
     
