--- a/templates/login.html
+++ b/templates/login.html
@@ -29,12 +29,12 @@
           <p> Have an account with us:</p> 
         <form method ="POST" action="/login">
         <div class="form-group">
-          <label>First Name:</label>
-          <input type="text" name="firstname" class="form-control" id="fname">
+          <label>User Name:</label>
+          <input type="text" name="username" class="form-control" >
         </div>
         <div class="form-group">
-          <label for="pwd">Password:</label>
-          <input type="password" name = "password" class="form-control" id="pwd">
+          <label>Password:</label>
+          <input type="password" name = "password" class="form-control">
         </div>
       
         <button type="submit" class="btn btn-default">Login</button>
