--- a/templates/signup.html
+++ b/templates/signup.html
@@ -33,21 +33,18 @@
 
         <p> Donot have an account with us:</p> 
         <form method ="POST" action="/signup">
+      
         <div class="form-group">
-          <label>First Name:</label>
-          <input type="text" name="firstname" class="form-control" id="fname">
-        </div>
-        <div class="form-group">
-          <label>Last Name:</label>
-          <input type="text" name="lastname" class="form-control" id="lname">
-        </div>
-        <div class="form-group">
-          <label>Email:</label>
-          <input type="email" name = "email" class="form-control" id="email">
+          <label>User name:</label>
+          <input type="text" name="username" class="form-control" >
         </div>
         <div class="form-group">
           <label>Password:</label>
-          <input type="password" name = "password" class="form-control" id="pwd">
+          <input type="password" name = "password" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Confirm Password:</label>
+          <input type="password" name = "confirmpassword" class="form-control">
         </div>
       
         <button type="submit" class="btn btn-default">Signup</button>
