--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,7 +23,7 @@
               <li><a href="{{ url_for('addcategories')}} ">Categories</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#"><span class="glyphicon glyphicon-user"></span> Hallo, {{session["firstname"]}}</a></li>
+              <li><a href="#"><span class="glyphicon glyphicon-user"></span> Hallo, {{session["username"]}}</a></li>
               <li><a href="{{ url_for('logout')}} ">Logout</a></li>
             </ul>
         </nav>
