--- a/templates/editcategories.html
+++ b/templates/editcategories.html
@@ -24,21 +24,18 @@
         </div>
     </nav>
 
-    <div class="container">
-        
+    <div class="container">       
 
         <p>Recipe Categories:</p> 
 
-        <form method = "POST" action="{{ url_for('editcategories', categoryname=categoryname) }}">
+        <form method = "POST" action="{{ url_for('editcategories') }}">
           <div class="form-group">
           <label>New Category Name:</label>
-          <input type="text" name = "new_categoryname" class="form-control">
+          <input type="text" name = "categoryname" class="form-control" value = "{{categoryname}}">
           </div>
       
           <button type="submit" class="btn btn-default">Update Category</button>
-        </form>
-        
-    
+        </form>   
     </div>
   </body>
 </html>
