--- a/templates/categories.html
+++ b/templates/categories.html
@@ -32,7 +32,7 @@
         <form method = "POST" action="/addcategories">
           <div class="form-group">
           <label>Category Name:</label>
-          <input type="text" name = "categoryname" class="form-control">
+          <input type="text" name = "categoryname" class="form-control" required>
           </div>
       
           <button type="submit" class="btn btn-default">Create Category</button>
