--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
   </head>
 
   
-  <body>
+  <body class = "my_container" background = {{ url_for('static', filename='img/food1.jpg') }}>
 
       <nav class="navbar navbar-inverse">
           <div class="container-fluid">
@@ -27,10 +29,18 @@
               <li><a href="{{ url_for('logout')}} ">Logout</a></li>
             </ul>
         </nav>
-
+      
       <div class = "container">
+      
+        <h3> Welcome to Yummy Recipes by Shakira</h3>
 
-         
+        <h3> Add Recipe Categories for your favourite foods</h3>
+
+        <button class="btn btn-default" align = "centre" style="height:50px; width:150px" >
+          <a href = {{ url_for('addcategories') }}>
+           Create Category
+          </a>
+        </button>
                
       </div>     
  
