--- a/templates/editcategories.html
+++ b/templates/editcategories.html
@@ -28,10 +28,15 @@
 
         <p>Recipe Categories:</p> 
 
-        <form method = "POST" action="{{ url_for('editcategories') }}">
+        <form method = "POST" action="/editcategories">
+
           <div class="form-group">
-          <label>New Category Name:</label>
-          <input type="text" name = "categoryname" class="form-control" value = "{{categoryname}}">
+              
+              <input type = "text" name = "categoryname" hidden value = {{key}}>
+
+              <label>New Category Name:</label>
+
+              <input type="text" name = "new_categoryname" class="form-control">
           </div>
       
           <button type="submit" class="btn btn-default">Update Category</button>
