--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,7 @@
+{% extends 'layout.html' %}
+
+{% block body %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -30,11 +34,11 @@
         <form method ="POST" action="/login">
         <div class="form-group">
           <label>User Name:</label>
-          <input type="text" name="username" class="form-control" >
+          <input type="text" name="username" class="form-control" required>
         </div>
         <div class="form-group">
           <label>Password:</label>
-          <input type="password" name = "password" class="form-control">
+          <input type="password" name = "password" class="form-control"  required>
         </div>
       
         <button type="submit" class="btn btn-default">Login</button>
@@ -49,3 +53,5 @@
     </div>
   </body>
 </html>
+
+{%endblock%}
