--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,8 @@
+{% extends 'layout.html' %}
+
+{% block body %}
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,29 +29,20 @@
           </div>
       </nav>
 
-      <div class="container">
-
-           <b> <p> Do you love cooking and eating amazing food and cannot keep track of your favorite chef's recipe</p> 
-            <p> We have got you </p>
-            <p> View our amazing recipes</p> </b>
-
+      <div class="container" id ="bannerimage">
 
         <p> Donot have an account with us:</p> 
         <form method ="POST" action="/signup">
       
         <div class="form-group">
           <label>User name:</label>
-          <input type="text" name="username" class="form-control" >
+          <input type="text" name="username" class="form-control" required >
         </div>
         <div class="form-group">
           <label>Password:</label>
-          <input type="password" name = "password" class="form-control">
+          <input type="password" name = "password" class="form-control" required>
         </div>
-        <div class="form-group">
-          <label>Confirm Password:</label>
-          <input type="password" name = "confirmpassword" class="form-control">
-        </div>
-      
+
         <button type="submit" class="btn btn-default">Signup</button>
         </form>
             
@@ -58,3 +54,4 @@
     </div>
   </body>
 </html>
+{%endblock%}
