Add edits to the models and templates

--- a/templates/viewcategories.html
+++ b/templates/viewcategories.html
@@ -60,7 +60,7 @@
           </td> 
           <td>
             <button class="btn btn-default">
-              <a href = {{ url_for('editcategories', categoryname = key)}}>
+              <a href = {{ url_for('editcategories')}}>
                Edit Category
               </a>
             </button>
