--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -21,16 +21,22 @@
                           <li><a href="{{ url_for('main')}}">Home</a></li>
                           <li><a href="{{ url_for('dashboard')}} ">Recipes</a></li>
                         </ul>
+
+                        <ul class="nav navbar-nav navbar-right">
+                          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Hallo, {{session["username"]}}</a></li>
+                          <li><a href="{{ url_for('logout')}} ">Logout</a></li>
+                        </ul>
                 </div>
+                
             </nav>
 
         <div class="container">
 
             <p>Recipes</p> 
 
-            {% for key, value in recipe_category.items() %}
+            {% for value in recipe_category.items() %}
             
-              <p>Recipes for {{value}}</p>
+              <p>Recipes for {{value[0]}}</p>
 
            {% endfor %}
           
@@ -39,12 +45,12 @@
             
               <div class="form-group">  
               <label>Name:</label>
-              <input type="text" name = "recipename" class="form-control">
+              <input type="text" name = "recipename" class="form-control" required>
               </div>
                         
               <div class="form-group">
               <label>Description:</label>
-              <input type="text" name = "description" class="form-control">
+              <input type="text" name = "description" class="form-control" required>
               </div>
           
               <button type="submit" class="btn btn-default">Add Recipe</button>
