--- a/templates/viewcategories.html
+++ b/templates/viewcategories.html
@@ -15,7 +15,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 
-  
   <body>
 
     <nav class="navbar navbar-inverse">
@@ -60,7 +59,7 @@
           </td> 
           <td>
             <button class="btn btn-default">
-              <a href = {{ url_for('editcategories')}}>
+              <a href = {{ url_for('editcategories', categoryname = categoryname)}}>
                Edit Category
               </a>
             </button>
