--- a/templates/editcategories.html
+++ b/templates/editcategories.html
@@ -28,18 +28,23 @@
 
         <p>Recipe Categories:</p> 
 
+        {%block form%}
+
         <form method = "POST" action="/editcategories">
 
           <div class="form-group">
+
+              <label>Category Name:</label>
               
-
-              <label>New Category Name:</label>
-
-              <input type="text" name = "new_categoryname" class="form-control">
+              <input type="text" name = "categoryname" class="form-control" value="{{ session['new_categoryname'] }}">
+              
+            
           </div>
       
           <button type="submit" class="btn btn-default">Update Category</button>
         </form>   
+
+        {%endblock%}
     </div>
   </body>
 </html>
