modified Categories CRUD

--- a/templates/editcategories.html
+++ b/templates/editcategories.html
@@ -30,7 +30,7 @@
 
         {%block form%}
 
-        <form method = "POST" action="/editcategories">
+        <form method = "POST" action="">
 
           <div class="form-group">
 
