--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -33,15 +33,8 @@
         <div class="container">
 
             <p>Recipes</p> 
-
-            {% for value in recipe_category.items() %}
             
-              <p>Recipes for {{value[0]}}</p>
-
-           {% endfor %}
-          
-            
-            <form method = "POST" action="/addrecipe">       
+            <form method = "POST" action = "/viewrecipes">       
             
               <div class="form-group">  
               <label>Name:</label>
